--- a/FileSynchronizer.UtitTests/packages.config
+++ b/FileSynchronizer.UtitTests/packages.config
@@ -4,4 +4,6 @@
   <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net461" />
   <package id="NUnit" version="3.8.1" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net461" />
+  <package id="System.IO.Abstractions" version="2.1.0.174" targetFramework="net461" />
+  <package id="System.IO.Abstractions.TestingHelpers" version="2.1.0.174" targetFramework="net461" />
 </packages>
