FileManager visibles and Friend Accembly.
Fixing tests in FileManagerFixture.

--- a/FileSynchronizer.UtitTests/FileSynchronizer.UtitTests.csproj
+++ b/FileSynchronizer.UtitTests/FileSynchronizer.UtitTests.csproj
@@ -59,7 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TestFileManager.cs" />
+    <Compile Include="FileManagerFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
