--- a/FileSynchronizer.Core/FileSynchronizer.Core.csproj
+++ b/FileSynchronizer.Core/FileSynchronizer.Core.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="System.IO.Abstractions" Version="2.1.0.174" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
