--- a/FileSynchronizer.UnitTests/FileSynchronizer.UnitTests.csproj
+++ b/FileSynchronizer.UnitTests/FileSynchronizer.UnitTests.csproj
@@ -16,12 +16,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
+    <PackageReference Include="NUnit" Version="3.9.0" />
     <PackageReference Include="System.IO.Abstractions" Version="2.1.0.175" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="2.1.0.175" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Properties\" />
+    <ProjectReference Include="..\FileSynchronizer.Core\FileSynchronizer.Core.csproj" />
   </ItemGroup>
 
 </Project>
