--- a/FileSynchronizer.UtitTests/FileSynchronizer.UnitTests.csproj
+++ b/FileSynchronizer.UtitTests/FileSynchronizer.UnitTests.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="FileManagerFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SynchronizerFixture.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
